syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message Operands {
	int32 first_number = 1;
	int32 second_number = 2;
}

message Result {
	int32 res = 1;
}

message ReqNum {
	int32 num = 1;
}

service Calculator {
	// Unary
	rpc Add(Operands) returns (Result) {};
	// Client streaming
	rpc Avg(stream ReqNum) returns (Result) {};
}
